Created aliases so correct id can be collected when joining table in newBookingsTable

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,6 @@ Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
-bachelor.sublime-project
-bachelor.sublime-workspace
+*.sublime-project
+*.sublime-workspace
 public/.htaccess
